Fix: too short bg img height on low viewports

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,13 +20,17 @@ html {
     font-size: 1.2rem;
 }
 
+:root {
+    --comingDaysOffsetTop: 0;
+}
+
 .background {
     z-index: -2;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: var(--comingDaysOffsetTop);
 
     background-image: url("https://images.unsplash.com/photo-1520985244272-9d0b8067a4ff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
     background-size: cover;
